--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jun 07 01:08:30 IST 2015
-sdk.dir=C\:\\Users\\Rakshith\\AppData\\Local\\Android\\sdk
+#Mon Jun 08 15:15:48 IST 2015
+sdk.dir=/home/accure/Android/Sdk
