--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,9 @@
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity
-            android:name=".ui.MainActivity"
-            android:label="@string/title_activity_main" >
-            <intent-filter>
+        <activity android:name=".ui.MainActivity">
+            <!-- Set label in intent filter and different label for activity so,app_name is not messed up-->
+            <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
