--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 # Created by .ignore support plugin (hsz.mobi)
+
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/.idea
+/gradle
+/gradlew.bat
+
